--- a/data/ui/gmeme-main.ui
+++ b/data/ui/gmeme-main.ui
@@ -8,6 +8,7 @@
         <child>
             <object class="GtkBox" id="box">
                 <property name="orientation">GTK_ORIENTATION_VERTICAL</property>
+                <property name="homogeneous">TRUE</property>
             </object>
         </child>
     </object>
