--- a/data/ui/gmeme-info-dialog.ui
+++ b/data/ui/gmeme-info-dialog.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <interface>
-    <object class="GtkDialog" id="memeDialog">
+    <template class="GMemeInfoDialog" parent="GtkDialog">
         <property name="title">Edit meme</property>
         <property name="default-height">350</property>
         <property name="default-width">400</property>
@@ -51,9 +51,7 @@
                                                             </object>
                                                         </child>
                                                         <child>
-                                                            <object class="GtkEntry">
-
-                                                            </object>
+                                                            <object class="GtkEntry" id="titleEntry"/>
                                                         </child>
                                                     </object>
                                                 </child>
@@ -77,7 +75,7 @@
                                                                 <property name="orientation">horizontal</property>
                                                                 <property name="spacing">6</property>
                                                                 <child>
-                                                                    <object class="GtkLabel">
+                                                                    <object class="GtkLabel" id="file-path-label">
                                                                         <property name="label">None</property>
                                                                         <property name="xalign">0</property>
                                                                         <property name="halign">start</property>
@@ -86,7 +84,7 @@
                                                                     </object>
                                                                 </child>
                                                                 <child>
-                                                                    <object class="GtkButton">
+                                                                    <object class="GtkButton" id="choose-file-button">
                                                                         <property name="icon-name">document-open-symbolic</property>
                                                                     </object>
                                                                 </child>
@@ -110,9 +108,7 @@
                                                             </object>
                                                         </child>
                                                         <child>
-                                                            <object class="GtkEntry">
-
-                                                            </object>
+                                                            <object class="GtkEntry" id="keywords-label"/>
                                                         </child>
                                                     </object>
                                                 </child>
@@ -147,5 +143,5 @@
                 </child>
             </object>
         </child>
-    </object>
+    </template>
 </interface>
